Update portfolio with latest changes

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset=  "UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css"> 
     </head>
 <body>
+ <header class="header">
     <nav class="navbar">
         <div class="Logo">Kewal Shukla</div>
         <ul class="Nav-links">
@@ -16,7 +17,7 @@
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>         
         </ul>
-    </nav>
+    </nav> </header> 
     <Section id="home" class="section hero">
         <h1>Hi, I am Kewal Shukla</h1>
         <p>Frontend developer | Barwala | Haryana. </p>
@@ -43,9 +44,12 @@
             <section id="Contact" class="Section">
                 <h2>Contact</h2>
             <p>Email :- Rahulshukla2075@gmail.com</p>
-<p>Github :<a href="https://github.com/yourusername" 
-    target="_blank">Your username</a></p>
+<p>Github :<a href="https://github.com/rahulshukla2075-prog/rahulshukla2075.github.io.git" 
+    target="_blank">rahulshukla2075.github.io</a></p>
             </section>
+             <footer class="footer">
+    <p>© 2025 Kewal Shukla. All rights reserved.</p>
+  </footer>
             <script src="script.js"></script>
 </body>
 </html> 
